force-app/main/default/objects/KYC_Details__c/KYC_Details__c.object-meta.xml
<CustomObject>
    <label>KYC Detail</label>
    <nameField>
        <displayFormat>KYC Detail-{00000}</displayFormat>
        <label>KYC Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>