force-app/main/default/objects/KYC_Details__c/fields/Field_Header__c.field-meta.xml
<CustomField>
    <fullName>Field_Header__c</fullName>
    <label>Field Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>