force-app/main/default/objects/KYC_Details__c/fields/KYC_API_Category__c.field-meta.xml
<CustomField>
    <fullName>KYC_API_Category__c</fullName>
    <label>KYC API Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary Financials</fullName>
            </value>
            <value>
                <fullName>Detailed Financials</fullName>
            </value>
            <value>
                <fullName>Detailed Financials-Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Detailed Financials-CF</fullName>
            </value>
            <value>
                <fullName>Detailed Financials-Finacials Ratios</fullName>
            </value>
            <value>
                <fullName>Detailed Financials - Revenue</fullName>
            </value>
            <value>
                <fullName>Detailed Finacials - Expense</fullName>
            </value>
            <value>
                <fullName>Customer  Profile</fullName>
            </value>
            <value>
                <fullName>Management Profile</fullName>
            </value>
            <value>
                <fullName>Statutory Registration Details</fullName>
            </value>
            <value>
                <fullName>MCA Registrations</fullName>
            </value>
            <value>
                <fullName>GST Registrations</fullName>
            </value>
            <value>
                <fullName>IEC Registration</fullName>
            </value>
            <value>
                <fullName>TAN Registration</fullName>
            </value>
            <value>
                <fullName>PAN Registration</fullName>
            </value>
            <value>
                <fullName>IEC Profile - detailed</fullName>
            </value>
            <value>
                <fullName>Credit Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>